@@ -30,7 +30,7 @@ Build-Depends-Indep: python3-sphinx
 Standards-Version: 3.9.8
 Vcs-Git: https://salsa.debian.org/games-team/mame.git
 Vcs-Browser: https://salsa.debian.org/games-team/mame
-Homepage: http://mamedev.org/
+Homepage: https://mamedev.org/
 XS-Autobuild: yes
 
 Package: mame
